[gd_scene load_steps=5 format=3 uid="uid://cocjq14xagypf"]

[ext_resource type="Script" path="res://pages/level_editor/menu/user_textbox.gd" id="1_vb1cq"]
[ext_resource type="Texture2D" uid="uid://bsqgdwle7h1rl" path="res://pages/level_editor/menu/move_text_image.png" id="2_hh26p"]
[ext_resource type="Texture2D" uid="uid://c5qvre5ew5du2" path="res://pages/level_editor/menu/delete_text_image.png" id="3_5bu24"]
[ext_resource type="Texture2D" uid="uid://thuvioj0d2cd" path="res://pages/level_editor/menu/resize_text_image.png" id="4_hxna5"]

[node name="UserTextbox" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_vb1cq")

[node name="UserText" type="TextEdit" parent="."]
layout_mode = 0
offset_right = 600.0
offset_bottom = 200.0
text = "Default Text!"

[node name="MoveTextButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -64.0
offset_top = -64.0
texture_normal = ExtResource("2_hh26p")
texture_pressed = ExtResource("2_hh26p")
texture_hover = ExtResource("2_hh26p")

[node name="DeleteTextButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 600.0
offset_top = -64.0
offset_right = 664.0
texture_normal = ExtResource("3_5bu24")
texture_pressed = ExtResource("3_5bu24")
texture_hover = ExtResource("3_5bu24")

[node name="ResizeTextButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 600.0
offset_top = 200.0
offset_right = 664.0
offset_bottom = 264.0
texture_normal = ExtResource("4_hxna5")
texture_pressed = ExtResource("4_hxna5")
texture_hover = ExtResource("4_hxna5")

[connection signal="focus_entered" from="UserText" to="." method="_on_user_text_focus_entered"]
[connection signal="focus_exited" from="UserText" to="." method="_on_user_text_focus_exited"]
[connection signal="button_down" from="MoveTextButton" to="." method="_on_move_text_button_button_down"]
[connection signal="button_up" from="MoveTextButton" to="." method="_on_move_text_button_button_up"]
[connection signal="focus_entered" from="MoveTextButton" to="." method="_on_move_text_button_focus_entered"]
[connection signal="focus_exited" from="MoveTextButton" to="." method="_on_move_text_button_focus_exited"]
[connection signal="button_up" from="DeleteTextButton" to="." method="_on_delete_text_button_button_up"]
[connection signal="focus_entered" from="DeleteTextButton" to="." method="_on_delete_text_button_focus_entered"]
[connection signal="focus_exited" from="DeleteTextButton" to="." method="_on_delete_text_button_focus_exited"]
[connection signal="button_down" from="ResizeTextButton" to="." method="_on_resize_text_button_button_down"]
[connection signal="button_up" from="ResizeTextButton" to="." method="_on_resize_text_button_button_up"]
[connection signal="focus_entered" from="ResizeTextButton" to="." method="_on_resize_text_button_focus_entered"]
[connection signal="focus_exited" from="ResizeTextButton" to="." method="_on_resize_text_button_focus_exited"]
